--- a/ClinicApp/package.json
+++ b/ClinicApp/package.json
@@ -16,13 +16,18 @@
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
+    "@angular/localize": "~12.2.0",
     "@angular/material": "^12.2.8",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@fortawesome/angular-fontawesome": "^0.9.0",
+    "@sweetalert2/ngx-sweetalert2": "^10.0.0",
+    "abab": "^2.0.5",
+    "bootstrap": "^4.5.0",
     "ngx-toastr": "^14.1.3",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.1.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
