--- a/ClinicAPI/ClinicAPI/appsettings.json
+++ b/ClinicAPI/ClinicAPI/appsettings.json
@@ -7,7 +7,11 @@
     }
   },
   "ConnectionStrings": {
-    "sqlConnection": "server=(localdb)\\mssqllocaldb; database=ClinicAPI_db; integrated security=true"
+    "sqlConnection": "server=(localdb)\\mssqllocaldb; database=ClinicAPIv1_db; integrated security=true"
+  },
+  "Jwt": {
+    "Issuer": "ClinicAPI",
+    "lifetime":  10
   },
   "AllowedHosts": "*"
 }
